--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        </div>
    </div>
 </div>  
-    <script src="js/main.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
